* switch to Mono.Cecil.dll 0.9.3 * Factorized duplicated code in AssemblyScanner.cs

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ _ReSharper*/
 .svn/
 #ignore tools from TreeSurgeon
 tools
+/src/images/DefaultCloneDetection.cqa.clonedetection.detection.clone-coverage.coverage-map.coverage-map.pattern0.png
+/src/images/DefaultCloneDetection.cqa.clonedetection.detection.clone-coverage.coverage-map.coverage-map.png
